# shelfmatch

./: .gitignore  README.md  program.md  pyproject.toml
src/shelfmatch/: __init__.py  cli.py
src/shelfmatch/orchestrator/: main.py
src/shelfmatch/pipeline/: __init__.py  detector.py  matcher.py  segmenter.py  shelfmatcher.py
src/shelfmatch/training/: __init__.py  auto_trainer.py  finetune.py  formatter.py  self_train.py  synthetic.py
src/shelfmatch/webapp/: main.py
